feat: implement record soft deletes
